# ur_ros_terminal

./: .gitignore  Dockerfile  README.md  joint_states_25-10-2024-14:46.csv  moveit_joint_positions.json
positions/: position_1.json  position_10.json  position_11.json  position_12.json  position_13.json  position_14.json  position_15.json  position_16.json  position_17.json  position_2.json  position_3.json  position_4.json  position_5.json  position_6.json  position_7.json  position_8.json  position_9.json
positions_fd/: freedrive_1.json  freedrive_2.json  freedrive_3.json  freedrive_4.json
src/ur5e_control/: CMakeLists.txt  graphing_and_csv.py  package.xml
src/ur5e_control/launch/: imu_logger.launch  plotjuggler.launch
src/ur5e_control/scripts/: force_avoidance.py  force_magnitude_publisher.py  force_to_velocity_controller.py  forward_kinematics.py  graphing_and_csv.py  imu_logger_csv.py  imu_logger_gui.py  move_ur5e_joint.py
src/ur5e_control/srv/: SetLogFolder.srv  SetLoggingDuration.srv
