<?xml version="1.0"?>
<package format="2">
  <name>ur5e_control</name>
  <version>0.0.0</version>
  <description>The ur5e_control package</description>
  <maintainer email="k.yavuzkurt1@gmail.com">K. Yavuzkurt</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>plotjuggler_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  <exec_depend>plotjuggler_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>

